--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>C</span>
+                            <span>C++</span>
                             <span>70%</span>
                         </div>
                         <div class="line django"></div>
