--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Header -->
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#"><span>Sahil</span><span>></span></a></div>
+            <div class="logo"><a href="#"><span>Sahil...</span><span>></span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn"><strong>Home</strong></a></li>
                 <li><a href="#about" class="menu-btn"><strong>About</strong></a></li>
